# templatexplorer

./: .gitignore  README.md  pyproject.toml  templatexplorer.py
docs/: TEMX.md
examples/: aoc-scaffold.temx  aoc.temx  blog-posts.temx  codyssi.temx  course-modules.temx  everybodycodes.temx  monorepo-services.temx  multi-env-config.temx  python-package.temx  react-components.temx  weekly-journal.temx
templatexplorer/: __init__.py  builder.py  cli.py  errors.py  expander.py  parser.py
tests/: test_builder.py  test_cli.py  test_examples_smoke.py  test_expander.py  test_integration_aoc.py  test_integration_codyssi.py  test_integration_everybodycodes.py  test_parser.py  test_review_regressions.py
