[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "templatexplorer"
version = "0.1.0"
description = "Build nested directory trees from a declarative .temx template file."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
templatexplorer = "templatexplorer.cli:main"

[tool.setuptools.packages.find]
include = ["templatexplorer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
